@@ -1,4 +1,4 @@
-//$Header: /mec_oftp2/de/mendelson/util/database/DebuggablePreparedStatement.java 8     2/02/22 10:16 Heller $
+//$Header: /as2/de/mendelson/util/database/DebuggablePreparedStatement.java 11    23/06/22 16:50 Heller $
 package de.mendelson.util.database;
 
 import java.io.InputStream;
@@ -38,7 +38,7 @@ import java.util.logging.Logger;
  * Database statement that could be debugged
  *
  * @author S.Heller
- * @version $Revision: 8 $
+ * @version $Revision: 11 $
  */
 public class DebuggablePreparedStatement extends DebuggableStatement implements PreparedStatement {
 
@@ -96,17 +96,27 @@ public class DebuggablePreparedStatement extends DebuggableStatement implements 
     public String getQueryWithParameterSingleLine() throws SQLException {
         StringBuilder builder = new StringBuilder();
         builder.append(query);
-        builder.append("; ");
-        ParameterMetaData parameterMeta = this.statement.getParameterMetaData();
-        for (int i = 0; i < parameterMeta.getParameterCount(); i++) {
-            Integer key = Integer.valueOf(i + 1);
-            if (this.map.containsKey(key)) {
-                builder.append("(").append(key).append(")");
-                builder.append(" [").append(parameterMeta.getParameterTypeName(key.intValue())).append("]");
-                builder.append(":");
-                builder.append(this.map.get(key));
-                builder.append("; ");
+        try {
+            ParameterMetaData parameterMeta = this.statement.getParameterMetaData();
+            for (int i = 0; i < parameterMeta.getParameterCount(); i++) {
+                Integer key = Integer.valueOf(i + 1);
+                if (this.map.containsKey(key)) {
+                    builder.append(" (")
+                            .append(key)
+                            .append(") [")
+                            .append(parameterMeta.getParameterTypeName(key.intValue()))
+                            .append("]:")
+                            .append(this.map.get(key))
+                            .append(";");
+                }
             }
+        } catch (java.sql.SQLFeatureNotSupportedException notSupported) {
+            //the oracle jdbc driver could not fetch metadata for complited statements if parameter are NULL, ignore this
+            builder.append(" (Warning: Problem fetching query parameter [")
+                    .append(notSupported.getClass().getSimpleName())
+                    .append("] ")
+                    .append(notSupported.getMessage())
+                    .append(")");
         }
         return (builder.toString());
     }
@@ -215,13 +225,13 @@ public class DebuggablePreparedStatement extends DebuggableStatement implements 
 
     @Override
     public void setBigDecimal(int param, BigDecimal bigDecimal) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(bigDecimal));
+        this.map.put(Integer.valueOf(param), String.valueOf(bigDecimal));
         this.statement.setBigDecimal(param, bigDecimal);
     }
 
     @Override
     public void setBinaryStream(int param, InputStream inputStream, int param2) throws SQLException {
-        this.map.put(new Integer(param), "<stream>");
+        this.map.put(Integer.valueOf(param), "<stream>");
         this.statement.setBinaryStream(param, inputStream, param2);
     }
 
@@ -232,79 +242,79 @@ public class DebuggablePreparedStatement extends DebuggableStatement implements 
 
     @Override
     public void setBoolean(int param, boolean param1) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(param1));
+        this.map.put(Integer.valueOf(param), String.valueOf(param1));
         this.statement.setBoolean(param, param1);
     }
 
     @Override
     public void setByte(int param, byte param1) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(param1));
+        this.map.put(Integer.valueOf(param), String.valueOf(param1));
         this.statement.setByte(param, param1);
     }
 
     @Override
     public void setBytes(int param, byte[] values) throws SQLException {
-        this.map.put(new Integer(param), "<bytes>");
+        this.map.put(Integer.valueOf(param), "<bytes>");
         this.statement.setBytes(param, values);
     }
 
     @Override
     public void setCharacterStream(int param, Reader reader, int param2) throws SQLException {
-        this.map.put(new Integer(param), "<charstream>");
+        this.map.put(Integer.valueOf(param), "<charstream>");
         this.statement.setCharacterStream(param, reader, param2);
     }
 
     @Override
     public void setClob(int param, Clob clob) throws SQLException {
-        this.map.put(new Integer(param), "<clob>");
+        this.map.put(Integer.valueOf(param), "<clob>");
         this.statement.setClob(param, clob);
     }
 
     @Override
     public void setDate(int param, Date date) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(date));
+        this.map.put(Integer.valueOf(param), String.valueOf(date));
         this.statement.setDate(param, date);
     }
 
     @Override
     public void setDate(int param, Date date, Calendar calendar) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(date));
+        this.map.put(Integer.valueOf(param), String.valueOf(date));
         this.statement.setDate(param, date, calendar);
     }
 
     @Override
     public void setDouble(int param, double param1) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(param1));
+        this.map.put(Integer.valueOf(param), String.valueOf(param1));
         this.statement.setDouble(param, param1);
     }
 
     @Override
     public void setFloat(int param, float param1) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(param1));
+        this.map.put(Integer.valueOf(param), String.valueOf(param1));
         this.statement.setFloat(param, param1);
     }
 
     @Override
     public void setInt(int param, int param1) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(param1));
+        this.map.put(Integer.valueOf(param), String.valueOf(param1));
         this.statement.setInt(param, param1);
     }
 
     @Override
     public void setLong(int param, long param1) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(param1));
+        this.map.put(Integer.valueOf(param), String.valueOf(param1));
         this.statement.setLong(param, param1);
     }
 
     @Override
     public void setNull(int param, int param1) throws SQLException {
-        this.map.put(new Integer(param), "null");
+        this.map.put(Integer.valueOf(param), "null");
         this.statement.setNull(param, param1);
     }
 
     @Override
     public void setNull(int param, int param1, String str) throws SQLException {
-        this.map.put(new Integer(param), "null");
+        this.map.put(Integer.valueOf(param), "null");
         this.statement.setNull(param, param1, str);
     }
 
@@ -335,7 +345,7 @@ public class DebuggablePreparedStatement extends DebuggableStatement implements 
             }
         }
         builder.append(")");
-        this.map.put(new Integer(param), builder.toString());
+        this.map.put(Integer.valueOf(param), builder.toString());
         this.statement.setObject(param, obj);
     }
 
@@ -366,7 +376,7 @@ public class DebuggablePreparedStatement extends DebuggableStatement implements 
             }
         }
         builder.append(")");
-        this.map.put(new Integer(param), builder.toString());
+        this.map.put(Integer.valueOf(param), builder.toString());
         this.statement.setObject(param, obj, param2);
     }
 
@@ -397,61 +407,61 @@ public class DebuggablePreparedStatement extends DebuggableStatement implements 
             }
         }
         builder.append(")");
-        this.map.put(new Integer(param), builder.toString());
+        this.map.put(Integer.valueOf(param), builder.toString());
         this.statement.setObject(param, obj, param2, param3);
     }
 
     @Override
     public void setRef(int param, Ref ref) throws SQLException {
-        this.map.put(new Integer(param), "<ref>");
+        this.map.put(Integer.valueOf(param), "<ref>");
         this.statement.setRef(param, ref);
     }
 
     @Override
     public void setShort(int param, short param1) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(param1));
+        this.map.put(Integer.valueOf(param), String.valueOf(param1));
         this.statement.setShort(param, param1);
     }
 
     @Override
     public void setString(int param, String str) throws SQLException {
-        this.map.put(new Integer(param), str);
+        this.map.put(Integer.valueOf(param), str);
         this.statement.setString(param, str);
     }
 
     @Override
     public void setTime(int param, Time time) throws SQLException {
-        this.map.put(new Integer(param), time.toString());
+        this.map.put(Integer.valueOf(param), time.toString());
         this.statement.setTime(param, time);
     }
 
     @Override
     public void setTime(int param, Time time, Calendar calendar) throws SQLException {
-        this.map.put(new Integer(param), String.valueOf(time));
+        this.map.put(Integer.valueOf(param), String.valueOf(time));
         this.statement.setTime(param, time, calendar);
     }
 
     @Override
     public void setTimestamp(int param, Timestamp timestamp) throws SQLException {
-        this.map.put(new Integer(param), timestamp.toString());
+        this.map.put(Integer.valueOf(param), timestamp.toString());
         this.statement.setTimestamp(param, timestamp);
     }
 
     @Override
     public void setTimestamp(int param, Timestamp timestamp, Calendar calendar) throws SQLException {
-        this.map.put(new Integer(param), timestamp.toString());
+        this.map.put(Integer.valueOf(param), timestamp.toString());
         this.statement.setTimestamp(param, timestamp, calendar);
     }
 
     @Override
     public void setURL(int param, URL uRL) throws SQLException {
-        this.map.put(new Integer(param), uRL.toString());
+        this.map.put(Integer.valueOf(param), uRL.toString());
         this.statement.setURL(param, uRL);
     }
 
     @Override
     public void setUnicodeStream(int param, InputStream inputStream, int param2) throws SQLException {
-        this.map.put(new Integer(param), "<unicode_stream>");
+        this.map.put(Integer.valueOf(param), "<unicode_stream>");
         this.statement.setUnicodeStream(param, inputStream, param2);
     }
 
@@ -487,103 +497,103 @@ public class DebuggablePreparedStatement extends DebuggableStatement implements 
 
     @Override
     public void setNString(int parameterIndex, String value) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<NString>");
+        this.map.put(Integer.valueOf(parameterIndex), "<NString>");
         this.statement.setNString(parameterIndex, value);
     }
 
     @Override
     public void setNCharacterStream(int parameterIndex, Reader value, long length) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<NCharacterStream>");
+        this.map.put(Integer.valueOf(parameterIndex), "<NCharacterStream>");
         this.statement.setNCharacterStream(parameterIndex, value, length);
     }
 
     @Override
     public void setNClob(int parameterIndex, NClob value) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<NClob>");
+        this.map.put(Integer.valueOf(parameterIndex), "<NClob>");
         this.statement.setNClob(parameterIndex, value);
     }
 
     @Override
     public void setClob(int parameterIndex, Reader reader, long length) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<Clob>");
+        this.map.put(Integer.valueOf(parameterIndex), "<Clob>");
         this.statement.setClob(parameterIndex, reader, length);
     }
 
     @Override
     public void setBlob(int parameterIndex, InputStream inputStream, long length) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<Blob>");
+        this.map.put(Integer.valueOf(parameterIndex), "<Blob>");
         this.statement.setBlob(parameterIndex, inputStream, length);
     }
 
     @Override
     public void setNClob(int parameterIndex, Reader reader, long length) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<NClob>");
+        this.map.put(Integer.valueOf(parameterIndex), "<NClob>");
         this.statement.setNClob(parameterIndex, reader, length);
     }
 
     @Override
     public void setSQLXML(int parameterIndex, SQLXML xmlObject) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<SQLXML>");
+        this.map.put(Integer.valueOf(parameterIndex), "<SQLXML>");
         this.statement.setSQLXML(parameterIndex, xmlObject);
     }
 
     @Override
     public void setAsciiStream(int parameterIndex, InputStream x, long length) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<AsciiStream>");
+        this.map.put(Integer.valueOf(parameterIndex), "<AsciiStream>");
         this.statement.setAsciiStream(parameterIndex, x, length);
     }
 
     @Override
     public void setBinaryStream(int parameterIndex, InputStream x, long length) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<BinaryStream>");
+        this.map.put(Integer.valueOf(parameterIndex), "<BinaryStream>");
         this.statement.setBinaryStream(parameterIndex, x, length);
     }
 
     @Override
     public void setCharacterStream(int parameterIndex, Reader reader, long length) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<CharacterStream>");
+        this.map.put(Integer.valueOf(parameterIndex), "<CharacterStream>");
         this.statement.setCharacterStream(parameterIndex, reader, length);
     }
 
     @Override
     public void setAsciiStream(int parameterIndex, InputStream x) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<AsciiStream>");
+        this.map.put(Integer.valueOf(parameterIndex), "<AsciiStream>");
         this.statement.setAsciiStream(parameterIndex, x);
     }
 
     @Override
     public void setBinaryStream(int parameterIndex, InputStream x) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<BinaryStream>");
+        this.map.put(Integer.valueOf(parameterIndex), "<BinaryStream>");
         this.statement.setBinaryStream(parameterIndex, x);
     }
 
     @Override
     public void setCharacterStream(int parameterIndex, Reader reader) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<CharacterStream>");
+        this.map.put(Integer.valueOf(parameterIndex), "<CharacterStream>");
         this.statement.setCharacterStream(parameterIndex, reader);
     }
 
     @Override
     public void setNCharacterStream(int parameterIndex, Reader value) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<NCharacterStream>");
+        this.map.put(Integer.valueOf(parameterIndex), "<NCharacterStream>");
         this.statement.setNCharacterStream(parameterIndex, value);
     }
 
     @Override
     public void setClob(int parameterIndex, Reader reader) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<Clob>");
+        this.map.put(Integer.valueOf(parameterIndex), "<Clob>");
         this.statement.setClob(parameterIndex, reader);
     }
 
     @Override
     public void setBlob(int parameterIndex, InputStream inputStream) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<Blob>");
+        this.map.put(Integer.valueOf(parameterIndex), "<Blob>");
         this.statement.setBlob(parameterIndex, inputStream);
     }
 
     @Override
     public void setNClob(int parameterIndex, Reader reader) throws SQLException {
-        this.map.put(new Integer(parameterIndex), "<NClob>");
+        this.map.put(Integer.valueOf(parameterIndex), "<NClob>");
         this.statement.setNClob(parameterIndex, reader);
     }
 
